--- a/src/components/GithubPopularRepos/index.css
+++ b/src/components/GithubPopularRepos/index.css
@@ -27,3 +27,33 @@
     width: 80%;
   }
 }
+.failure-img-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  /* height: 100vh; */
+}
+@media screen and (min-width: 768px) {
+  .failure-img-container {
+    width: 80%;
+  }
+}
+.failure-img {
+  /* width: 500px; */
+  width: 400px;
+  padding-top: 50px;
+}
+@media screen and (min-width: 768px) {
+  .failure-img {
+    width: 600px;
+    width: 55%;
+    padding-top: 20px;
+  }
+}
+.loader-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  height: 100vh;
+}
