--- a/src/components/LanguageFilterItem/index.css
+++ b/src/components/LanguageFilterItem/index.css
@@ -7,10 +7,23 @@
   border: solid 0px;
   background-color: transparent;
   cursor: pointer;
+  font-family: 'Roboto';
+}
+@media screen and (min-width: 768px) {
+  .button {
+    font-size: 15px;
+  }
 }
 .special-button {
   border: 1px;
   color: #0284c7;
   border: solid 1px #0284c7;
   border-radius: 10px;
+}
+@media screen and (min-width: 768px) {
+  .special-button {
+    border-radius: 15px;
+    padding: 1px;
+    min-width: 10px;
+  }
 }
