--- a/src/components/LanguageFilterItem/index.css
+++ b/src/components/LanguageFilterItem/index.css
@@ -1,29 +1,22 @@
-/* Write your CSS here */
-.list-item {
-  margin: 10px;
-  font-family: 'Roboto';
-}
-.button {
-  border: solid 0px;
+.language-btn {
+  color: #0f172a;
   background-color: transparent;
-  cursor: pointer;
   font-family: 'Roboto';
+  font-size: 16px;
+  font-weight: 600;
+  border: none;
+  margin-right: 16px;
+  margin-bottom: 16px;
+  padding: 16px;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  flex-shrink: 0;
+  cursor: pointer;
+  outline: none;
 }
-@media screen and (min-width: 768px) {
-  .button {
-    font-size: 15px;
-  }
-}
-.special-button {
-  border: 1px;
+
+.active-language-btn {
   color: #0284c7;
-  border: solid 1px #0284c7;
-  border-radius: 10px;
-}
-@media screen and (min-width: 768px) {
-  .special-button {
-    border-radius: 15px;
-    padding: 1px;
-    min-width: 10px;
-  }
+  border-radius: 24px;
+  border: 1px solid #0284c7;
 }
