--- a/src/components/RepositoryItem/index.css
+++ b/src/components/RepositoryItem/index.css
@@ -1,47 +1,62 @@
-/* Write your CSS here */
-.list-element {
-  margin-left: 10px;
-  margin-bottom: 10px;
-  background-color: #f8f8ff;
-  padding: 15px;
-  border-radius: 10px;
+.repository-item {
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
   align-items: center;
-  width: 200px;
+  flex-basis: 100%;
+  background-color: #f8f8ff;
+  border-radius: 24px;
+  height: 300px;
+  margin-bottom: 24px;
+  padding: 24px;
 }
-@media screen and (min-width: 768px) {
-  .list-element {
-    width: 300px;
-    max-width: 50%;
+
+@media (min-width: 576px) {
+  .repository-item {
+    flex-basis: 45%;
+    margin-left: 16px;
   }
 }
-.avatar-url {
-  height: 60px;
-}
-@media screen and (min-width: 768px) {
-  .avatar-url {
-    height: 100px;
+
+@media (min-width: 992px) {
+  .repository-item {
+    flex-basis: 30%;
   }
 }
-.name {
-  color: red;
-  font-size: 20px;
-  font-weight: 600;
+
+@media (min-width: 1200px) {
+  .repository-item {
+    flex-basis: 23%;
+  }
+}
+
+.repository-image {
+  width: 92px;
+  height: 92px;
+}
+
+.repository-name {
+  color: #e73959;
   font-family: 'Roboto';
-  margin-bottom: 0px;
+  font-size: 24px;
+  font-weight: 500;
 }
-.issues-container {
+
+.stats-container {
   display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
   align-items: center;
-  /* justify-content: flex-start; */
-  /* border: solid 2px red; */
-  width: 100%;
+  width: 85%;
+  margin-bottom: 16px;
 }
-.stars {
-  height: 15px;
-  margin-right: 10px;
+
+.stats-icon {
+  width: 16px;
+  height: 16px;
+  margin-right: 12px;
+}
+
+.stats-text {
+  color: #1e293b;
+  font-family: 'Roboto';
+  font-size: 16px;
+  margin: 0px;
 }
